added gzip file compression